feat: ステートレス化によりスレッド安全性を確保し、設計を改善 中優先度の指摘に基づき、 ControllerとServiceから状態（データ）を完全に削除する「ステートレスな設計」を採用し、 スレッド安全性の問題を根本的に解決しました。
また、build.gradle から未使用の commons-lang3 依存を削除しました。

・Serviceにデータとロジックを移動し、Controllerは窓口（リクエスト受付）に専念。
・特に、`getScores()`では`Collections.unmodifiableMap`を使って、データの**「外部からの意図しない変更」もガード**しました！
・コンストラクタでのDIや`resetData`の整合性など、その他の指摘事項もすべて解決済みです。